finalize port